# tensorflow_microfrontend_android

./: .gitignore  README.md  gradle.properties  settings.gradle.kts  setup.sh
app/: build.gradle.kts
app/src/androidTest/java/com/jamstudios/amf_example/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/jamstudios/amf_example/: MainActivity.kt  Utils.kt
app/src/main/java/com/jamstudios/amf_example/ui/components/: SpectrogramView.kt  ViridisLUT.kt
app/src/main/java/com/jamstudios/amf_example/ui/screens/: MainScreen.kt
app/src/main/java/com/jamstudios/amf_example/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/java/io/viejony/amf_example/: MainActivity.kt  Utils.kt
app/src/main/java/io/viejony/amf_example/ui/components/: SpectrogramView.kt  ViridisLUT.kt
app/src/main/java/io/viejony/amf_example/ui/screens/: MainScreen.kt
app/src/main/java/io/viejony/amf_example/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/jamstudios/amf_example/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
microfrontend/: build.gradle.kts
microfrontend/src/androidTest/java/com/jamstudios/microfrontend/: ExampleInstrumentedTest.kt
microfrontend/src/main/cpp/: CMakeLists.txt  jmicrofrontend.cpp
microfrontend/src/main/java/com/jamstudios/microfrontend/: AudioUtils.kt  FeatureExtractor.kt
microfrontend/src/main/java/io/viejony/microfrontend/: AudioUtils.kt  FeatureExtractor.kt
microfrontend/src/test/java/com/jamstudios/microfrontend/: ExampleUnitTest.kt
